--- a/Laravel-React-Inertia/package.json
+++ b/Laravel-React-Inertia/package.json
@@ -19,8 +19,8 @@
         "@headlessui/react": "^2.2.0",
         "@heroicons/react": "^2.1.5",
         "@reduxjs/toolkit": "^2.3.0",
-        "axios": "^1.7.7",
         "concurrently": "^9.1.0",
+        "nanoid": "^5.0.9",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-redux": "^9.1.2",
